# DefectAnalysis

./: .gitignore  CMakeLists.txt  README.md
include/: compute_defect.hpp  misc_tools.hpp  read_write.hpp
legacy/: examine_clusters.py  find_defects.py  misc_tools.py  post_cluster_defects.py
lib/src/: performance_tools.cpp
python/: cluster_defects.py  data_structures.py  misc_tools.py  performance_toolsWrapper.py  plot_defects.py  read_write.py
python/.ropeproject/: globalnames  objectdb
src/: compute_defect.cpp  find_defects.cpp  find_defects_multi.cpp  misc_tools.cpp  read_write.cpp
